--- a/bowling-game/src/App.css
+++ b/bowling-game/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
